--- a/frontend/src/app/articles-details/articles-details.component.scss
+++ b/frontend/src/app/articles-details/articles-details.component.scss
@@ -3,7 +3,6 @@
   width: 100%;
   max-width: 600px;
   margin: 0 auto;
-  padding: 0 16px;
   box-sizing: border-box;
 }
 
@@ -80,7 +79,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding: 24px;
+  padding: 24px 0;
   margin: 0;
   width: 100%;
 }
